# rust.game_of_life

./: Cargo.toml  README.md  example.map
maps/: acorn.map  example.map
src/: game_field.rs  main.rs  render.rs
src/cell/: cell.rs  mod.rs
