[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Ivan Yakushev <iyakushev@quantumbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
sdl2 = "0.33"
clap = "2.33.0"
phf = { version = "0.8", features = ["macros"] }
rand = "0.7.3"